Fix margin collapse issue

--- a/src/App.css
+++ b/src/App.css
@@ -38,5 +38,5 @@
 }
 
 .btn-container {
-  margin: 10px 15px;
+  padding: 10px 15px;
 }
